Fix admin editor buttons not clickable on mobile

--- a/src/pages/BlogDetail.css
+++ b/src/pages/BlogDetail.css
@@ -319,7 +319,7 @@
     }
 
     .featured-image {
-        margin-top: calc(-1 * var(--space-12));
+        margin-top: calc(-1 * var(--space-4));
         border-radius: var(--radius-lg);
     }
 
